--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -10,14 +10,160 @@
 /* Reset / Normalize
    ============================= */
 
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
-
-/* Variables
-   ============================= */
-
-   :root {
-    --color-primary: #D73953;
-    --color-black:  #090909;
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+html {
+    line-height: 1.15;
+    -webkit-text-size-adjust: 100%;
+  }
+  body {
+    margin: 0;
+  }
+  main {
+    display: block;
+  }
+  h1 {
+    font-size: 2em;
+    margin: 0.67em 0;
+  }
+  hr {
+    box-sizing: content-box;
+    height: 0;
+    overflow: visible;
+  }
+  pre {
+    font-family: monospace, monospace;
+    font-size: 1em;
+  }
+  a {
+    background-color: transparent;
+  }
+  abbr[title] {
+    border-bottom: none;
+    text-decoration: underline;
+    text-decoration: underline dotted;
+  }
+  b,
+  strong {
+    font-weight: bolder;
+  }
+  code,
+  kbd,
+  samp {
+    font-family: monospace, monospace;
+    font-size: 1em;
+  }
+  small {
+    font-size: 80%;
+  }
+  sub,
+  sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+  }
+  sub {
+    bottom: -0.25em;
+  }
+  sup {
+    top: -0.5em;
+  }
+  img {
+    border-style: none;
+  }
+  button,
+  input,
+  optgroup,
+  select,
+  textarea {
+    font-family: inherit;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 0;
+  }
+  button,
+  input {
+    overflow: visible;
+  }
+  button,
+  select {
+    text-transform: none;
+  }
+  [type="button"],
+  [type="reset"],
+  [type="submit"],
+  button {
+    -webkit-appearance: button;
+  }
+  [type="button"]::-moz-focus-inner,
+  [type="reset"]::-moz-focus-inner,
+  [type="submit"]::-moz-focus-inner,
+  button::-moz-focus-inner {
+    border-style: none;
+    padding: 0;
+  }
+  [type="button"]:-moz-focusring,
+  [type="reset"]:-moz-focusring,
+  [type="submit"]:-moz-focusring,
+  button:-moz-focusring {
+    outline: 1px dotted ButtonText;
+  }
+  fieldset {
+    padding: 0.35em 0.75em 0.625em;
+  }
+  legend {
+    box-sizing: border-box;
+    color: inherit;
+    display: table;
+    max-width: 100%;
+    padding: 0;
+    white-space: normal;
+  }
+  progress {
+    vertical-align: baseline;
+  }
+  textarea {
+    overflow: auto;
+  }
+  [type="checkbox"],
+  [type="radio"] {
+    box-sizing: border-box;
+    padding: 0;
+  }
+  [type="number"]::-webkit-inner-spin-button,
+  [type="number"]::-webkit-outer-spin-button {
+    height: auto;
+  }
+  [type="search"] {
+    -webkit-appearance: textfield;
+    outline-offset: -2px;
+  }
+  [type="search"]::-webkit-search-decoration {
+    -webkit-appearance: none;
+  }
+  ::-webkit-file-upload-button {
+    -webkit-appearance: button;
+    font: inherit;
+  }
+  details {
+    display: block;
+  }
+  summary {
+    display: list-item;
+  }
+  template {
+    display: none;
+  }
+  [hidden] {
+    display: none;
+  }
+  
+  /* Variables
+     ============================= */
+  
+  :root {
+    --color-primary: #d73953;
+    --color-black: #090909;
     --color-white: #ffffff;
     --color-grey: #a0a0a0;
     --color-light-grey: #f3f3f3;
@@ -25,8 +171,8 @@
   
     --text-color: var(--color-black);
   
-    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
@@ -69,7 +215,7 @@
     --nav-item-font-family: var(--font-family-headings);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: .04rem;
+    --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 0 2rem;
     --nav-item-link-hover: var(--color-white);
@@ -86,20 +232,22 @@
     --button-hover-background: var(--color-primary);
   
     /** MOTION **/
-    --transition-duration: .3s;
+    --transition-duration: 0.3s;
     --transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
   }
   
   /* Base
-      ============================= */
+        ============================= */
   
-  *, *:before, *:after {
+  *,
+  *:before,
+  *:after {
     box-sizing: border-box;
   }
   
   html {
-  scroll-behavior: smooth;
-  font-size: 62.5%;
+    scroll-behavior: smooth;
+    font-size: 62.5%;
   }
   
   body {
@@ -110,7 +258,12 @@
     line-height: var(--line-height-base);
   }
   
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
   }
@@ -150,7 +303,7 @@
   }
   
   /* Helpers
-      ============================= */
+        ============================= */
   
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
@@ -164,7 +317,7 @@
   /*** 2. LAYOUT ***/
   
   /* Layout
-      ============================= */
+        ============================= */
   
   .container {
     width: 960px;
@@ -173,18 +326,19 @@
   }
   
   /* Grid
-      ============================= */
+        ============================= */
+  
   .row {
     display: flex;
   }
-
+  
   ul.row {
     margin: -1rem;
     padding: 0;
     list-style: none;
   }
   
-  [class*='col-'] {
+  [class*="col-"] {
     margin: 1rem;
   }
   
@@ -197,7 +351,7 @@
   }
   
   /* Navbar
-      ============================= */
+        ============================= */
   
   .nav {
     display: flex;
@@ -212,6 +366,9 @@
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
     letter-spacing: var(--nav-item-letter-spacing);
+  }
+  
+  .nav .nav-item + .nav-item {
     margin: var(--nav-item-margin);
   }
   
@@ -227,7 +384,7 @@
   }
   
   .nav .nav-link::before {
-    content: '';
+    content: "";
     position: absolute;
     bottom: 0;
     left: 0;
@@ -241,21 +398,17 @@
     background-color: var(--color-primary);
     width: 100%;
   }
-
-  .nav .nav-item + .nav-item {
-    margin: var(--nav-item-margin);
-  }
   
   /* Header
-      ============================= */
+        ============================= */
   
   .header {
     padding: var(--header-padding);
-         position: relative;
-         z-index: 3;
-         background: transparent;
+    position: relative;
+    z-index: 3;
+    background: transparent;
   }
-
+  
   .header-container {
     display: flex;
     justify-content: space-between;
@@ -263,7 +416,7 @@
   }
   
   /* Footer
-      ============================= */
+        ============================= */
   
   .footer {
     --nav-item-font-weight: normal;
@@ -296,7 +449,7 @@
   /*** 3. SECTION ***/
   
   /* Section (all styles)
-      ============================= */
+        ============================= */
   
   .section {
     padding: var(--section-padding);
@@ -333,7 +486,7 @@
   }
   
   /* Section theming
-      ============================= */
+        ============================= */
   
   [data-section-theme="dark"] {
     --button-color: var(--color-white);
@@ -343,22 +496,22 @@
   }
   
   /* Section HERO
-      ============================= */
+        ============================= */
   
   .section-hero {
     position: relative;
     margin-top: -8.5rem;
   }
-
+  
   .section-hero .section-body {
     padding: 10rem 4rem;
   }
-
+  
   .section-hero .section-category {
     color: var(--color-white);
     text-transform: uppercase;
   }
-
+  
   .hero-homepage {
     background-position: 75% 0;
     background-repeat: no-repeat;
@@ -378,32 +531,38 @@
     min-height: 50vh;
   }
   
-  /* Section Latest news ============================= */
+  /* Section Latest news
+        ============================= */
+  
   .section-latest-news .row {
     flex-direction: row-reverse;
   }
-
-  /* Section SERVICES ============================= */
+  
+  /* Section SERVICES 
+        ============================= */
+  
   .section-services .row {
     flex-wrap: wrap;
   }
-
-  /* Section ABOUT US ============================= */
-  .section-about-us [class^="col-"] {
-  align-self: center;
-}
+  
+  /* Section ABOUT US
+        ============================= */
+  
+  .section-about-us [class*="col-"] {
+    align-self: center;
+  }
   
   /*** 4. CARD ***/
   
   /* Card (all styles)
-      ============================= */
+        ============================= */
   
   .card-category {
     color: var(--color-primary);
   }
   
   /* Card WORK
-      ============================= */
+        ============================= */
   
   .card-work .card-outer {
     position: relative;
@@ -460,7 +619,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    content: '';
+    content: "";
   }
   
   .card-work:hover .card-title {
@@ -468,7 +627,7 @@
   }
   
   /* Card SERVICES
-      ============================= */
+        ============================= */
   
   .card-services .card-title {
     margin: 0;
@@ -489,7 +648,7 @@
   }
   
   /* Card TESTIMONIAL
-      ============================= */
+        ============================= */
   
   .card-testimonial {
     text-align: center;
@@ -512,7 +671,7 @@
   }
   
   .card-testimonial .card-quote::before {
-    content: '\201C';
+    content: "\201C";
     position: absolute;
     top: -4.5rem;
     left: -1rem;
@@ -520,96 +679,101 @@
     font-size: 10rem;
     z-index: -1;
   }
-
+  
   /*** ARTICLE PAGE ***/
-/* Section HERO (article) ============================= */
-
-    .hero-article {
-        background-size: 150rem 100rem;
-        background-position: 50% 0;
-    }
-
-    .hero-article::before {
-        content: "";
-        background: rgba(0, 0, 0, 0.8);
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        z-index: 0;
-    }
-
-    .hero-article .section-inner {
-        text-align: center;
-        align-items: center;
-        min-height: 40vh;
-    }
-
-    .hero-article .section-body {
-        position: relative;
-        padding: 7rem 0 0;
-        z-index: 2;
-    }
-
-    .main-article {
-        padding: 5rem 0;
-    }
-
-    /* Post ============================= */
-
-    .post {
-        display: flex;
-    }
-
-    .post-content {
-        width: 100%;
-    }
-
-    .post-aside {
-        order: -1;
-        min-width: 20%;
-    }
-
-    /* Post Meta ============================= */
-
-    .post-meta-list {
-        flex-direction: column;
-    }
-
-    .post-meta-list strong {
-        color: var(--color-primary);
-        font-size: var(--font-size-small);
-        text-transform: uppercase;
-        display: block;
-    }
-
-    .post-meta-list [class^="post-meta-"] {
-        margin-bottom: 1rem;
-        padding-bottom: 1rem;
-        border-bottom: 0.2rem solid var(--color-light-grey);
-    }
-
-    .post-meta-list [class^="post-meta-"]:last-child {
-        border: none;
-        margin-bottom: 3rem;
-    }
-
-    /* Tag list ============================= */
-
-    .tag-list {
-        padding: 0;
-        list-style: none;
-    }
-
-    .tag-list li {
-        display: inline;
-    }
-
-    .tag-list li::after {
-        content: ", ";
-    }
-
-    .tag-list li:last-child::after {
-        content: "";
-    }
+  
+  /* Section HERO (article)
+      ============================= */
+  
+  .hero-article {
+    background-size: 150rem 100rem;
+    background-position: 50% 0;
+  }
+  
+  .hero-article::before {
+    content: "";
+    background: rgba(0, 0, 0, 0.8);
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 0;
+  }
+  
+  .hero-article .section-inner {
+    text-align: center;
+    align-items: center;
+    min-height: 40vh;
+  }
+  
+  .hero-article .section-body {
+    position: relative;
+    padding: 7rem 0 0;
+    z-index: 2;
+  }
+  
+  .main-article {
+    padding: 5rem 0;
+  }
+  
+  /* Post
+      ============================= */
+  
+  .post {
+    display: flex;
+  }
+  
+  .post-content {
+    width: 100%;
+  }
+  
+  .post-aside {
+    order: -1;
+    min-width: 20%;
+  }
+  
+  /* Post Meta
+      ============================= */
+  
+  .post-meta-list {
+    flex-direction: column;
+  }
+  
+  .post-meta-list strong {
+    color: var(--color-primary);
+    font-size: var(--font-size-small);
+    text-transform: uppercase;
+    display: block;
+  }
+  
+  .post-meta-list [class*="post-meta"] {
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 0.2rem solid var(--color-light-grey);
+  }
+  
+  .post-meta-list [class*="post-meta"]:last-child {
+    border: none;
+    margin-bottom: 3rem;
+  }
+  
+  /* Tag list
+      ============================= */
+  
+  .tag-list {
+    padding: 0;
+    list-style: none;
+  }
+  
+  .tag-list li {
+    display: inline;
+  }
+  
+  .tag-list li::after {
+    content: ", ";
+  }
+  
+  .tag-list li:last-child::after {
+    content: "";
+  }
